[gd_scene load_steps=17 format=1]

[ext_resource path="res://Scripts/Level_Selection.gd" type="Script" id=1]
[ext_resource path="res://Textures/Level_Buttons/01.png" type="Texture" id=2]
[ext_resource path="res://Textures/Level_Buttons/01_Pressed.png" type="Texture" id=3]
[ext_resource path="res://Textures/Level_Buttons/01_Hover.png" type="Texture" id=4]
[ext_resource path="res://Textures/Level_Buttons/00.png" type="Texture" id=5]
[ext_resource path="res://Textures/Level_Buttons/00_Pressed.png" type="Texture" id=6]
[ext_resource path="res://Textures/Level_Buttons/00_Hover.png" type="Texture" id=7]
[ext_resource path="res://Textures/Level_Buttons/02.png" type="Texture" id=8]
[ext_resource path="res://Textures/Level_Buttons/02_Pressed.png" type="Texture" id=9]
[ext_resource path="res://Textures/Level_Buttons/02_Hover.png" type="Texture" id=10]
[ext_resource path="res://Textures/Level_Buttons/03.png" type="Texture" id=11]
[ext_resource path="res://Textures/Level_Buttons/03_Pressed.png" type="Texture" id=12]
[ext_resource path="res://Textures/Level_Buttons/03_Hover.png" type="Texture" id=13]
[ext_resource path="res://Textures/Level_Buttons/04.png" type="Texture" id=14]
[ext_resource path="res://Textures/Level_Buttons/04_Pressed.png" type="Texture" id=15]
[ext_resource path="res://Textures/Level_Buttons/04_Hover.png" type="Texture" id=16]

[node name="Node" type="Node"]

script/script = ExtResource( 1 )

[node name="01" type="TextureButton" parent="."]

hint/tooltip = "TEST"
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 310.0
margin/top = 80.0
margin/right = 390.0
margin/bottom = 160.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 2 )
textures/pressed = ExtResource( 3 )
textures/hover = ExtResource( 4 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="00" type="TextureButton" parent="."]

hint/tooltip = "TEST"
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 150.0
margin/top = 80.0
margin/right = 230.0
margin/bottom = 160.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 5 )
textures/pressed = ExtResource( 6 )
textures/hover = ExtResource( 7 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="02" type="TextureButton" parent="."]

hint/tooltip = "TEST"
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 470.0
margin/top = 80.0
margin/right = 550.0
margin/bottom = 160.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 8 )
textures/pressed = ExtResource( 9 )
textures/hover = ExtResource( 10 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="03" type="TextureButton" parent="."]

hint/tooltip = "TEST"
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 630.0
margin/top = 80.0
margin/right = 710.0
margin/bottom = 160.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 11 )
textures/pressed = ExtResource( 12 )
textures/hover = ExtResource( 13 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="Button" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 70.0
margin/top = 480.0
margin/right = 153.0
margin/bottom = 500.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Main Menu"
flat = false

[node name="04" type="TextureButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 790.0
margin/top = 80.0
margin/right = 870.0
margin/bottom = 160.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 14 )
textures/pressed = ExtResource( 15 )
textures/hover = ExtResource( 16 )
params/resize_mode = 0
params/stretch_mode = 0

[connection signal="pressed" from="01" to="." method="_on_TextureButton_pressed"]

[connection signal="pressed" from="00" to="." method="_on_2_pressed"]

[connection signal="pressed" from="02" to="." method="_on_TextureButton1_pressed"]

[connection signal="pressed" from="03" to="." method="_on_TextureButton2_pressed"]

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]

[connection signal="pressed" from="04" to="." method="_on_04_pressed"]


